# neptune-mocks

./: .env  .env.template  .gitignore  README-neptune-config.md  README.md  convert_person_to_opencypher.py  generate_edges.py  generate_edges_person_name.py  generate_mock_data.py  generate_mock_name_data.py  generate_mock_person_data.py  generate_node_data.py  load_mock_data.py  load_mock_data_to_postgres.py  mkdocs.yml  neptune-bastion-dev.pem  process_response.py  requirements.txt  setup.py  sql_validate_postgres.sql  test_neptune_connection.py  test_neptune_ec2_connection.py  upload_to_neptune.py  validate_edges.py  validate_json_data.py  validate_name_data.py
data/output/: mock_person_data.csv.old
docs/: GDS Investigator Archtitecture.drawio  api.md  development.md  index.md  usage.md
docs/api/: generate_mock_person_data.md
docs/demo/: demo-data.md
docs/infrastructure/: aws.md
docs/neptune/: neptune-metrics.md  neptune-opensearch.md
docs/nodes/: form.md  name.md  person.md  receipt.md
docs/person/: person-erd.md  person.md
modules/person_converter/: README.md  setup.py
neptune_gremlin_converter/: README.md  pyproject.toml  setup.py
neptune_gremlin_converter/src/neptune_gremlin_converter/: __init__.py
src/: __init__.py
src/aws/: AWS-SigV4-Proxy.md  README-AWS-SigV4-Proxy.md  README-replication-checklist.md  README.md  aws_credentials_troubleshooter.py  aws_environmental_variables.py  aws_get_iam_roles.py  aws_neptune_opensearch_etl.py  aws_neptune_serverless_describe.py  aws_opensearch_iam_auth.py  (+11 more)
validation/: aws.md  neptune.md
(+72 files in other folders)
