[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neptune_gremlin_converter"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A utility to convert Neptune Gremlin results to OpenCypher format"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/neptune_gremlin_converter" 